[package]
name = "tex-auf2"
version = "0.2.2"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
aviutl2 = "0.33.0"
dashmap = "6.2.1"
educe = "0.6.0"
ratex-layout = "0.1.11"
ratex-lexer = "0.1.11"
ratex-parser = "0.1.11"
ratex-svg = { version = "0.1.11", features = ["embed-fonts", "standalone"] }
ratex-types = "0.1.11"
rayon = "1.12.0"
resvg = "0.47.0"
